# Data-Structures

./: .gitignore  CMakeLists.txt  README.txt
Main/: Main.cpp
include/: ForwardList.h  MyVector.h  Queue.h  Stack.h  Task.h
test/: testForwardList.cpp  test_structures.cpp
